--- a/src/PdfViewer.css
+++ b/src/PdfViewer.css
@@ -3,6 +3,15 @@
   border: 1px solid #000000; 
 }  
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-column > .entry {
+  flex-grow: 1;
+}
+
 .exper{
   width: 500px;
   margin-top: 70px;
